--- a/features/draft/spec/fetch.yml.dist
+++ b/features/draft/spec/fetch.yml.dist
@@ -44,11 +44,14 @@ compat_features:
   #   safari_ios: "12"
   - http.headers.Cross-Origin-Resource-Policy
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-11-26
   # support:
   #   chrome: "66"
   #   chrome_android: "66"
   #   edge: "15"
+  #   firefox: "133"
+  #   firefox_android: "133"
   #   safari: "13"
   #   safari_ios: "13"
   - api.Request.Request.init_keepalive_parameter
