--- a/features/draft/spec/permissions.yml.dist
+++ b/features/draft/spec/permissions.yml.dist
@@ -42,11 +42,14 @@ compat_features:
   - api.PermissionStatus.change_event
   - api.Permissions.permission_notifications
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-11-26
   # support:
   #   chrome: "43"
   #   chrome_android: "43"
   #   edge: "79"
+  #   firefox: "133"
+  #   firefox_android: "133"
   #   safari: "16.4"
   #   safari_ios: "16.4"
   - api.WorkerNavigator.permissions
