--- a/features/fetch.yml.dist
+++ b/features/fetch.yml.dist
@@ -350,6 +350,19 @@ compat_features:
   #   safari_ios: "17"
   - api.Headers.getSetCookie
 
+  # baseline: low
+  # baseline_low_date: 2024-11-26
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "15"
+  #   firefox: "133"
+  #   firefox_android: "133"
+  #   safari: "13"
+  #   safari_ios: "13"
+  - api.Request.keepalive
+  - api.fetch.init_keepalive_parameter
+
   # baseline: false
   # support:
   #   chrome: "43"
@@ -389,16 +402,6 @@ compat_features:
   #   safari: "10.1"
   #   safari_ios: "10.3"
   - api.Request.cache.only-if-cached
-
-  # baseline: false
-  # support:
-  #   chrome: "66"
-  #   chrome_android: "66"
-  #   edge: "15"
-  #   safari: "13"
-  #   safari_ios: "13"
-  - api.Request.keepalive
-  - api.fetch.init_keepalive_parameter
 
   # baseline: false
   # support:
