--- a/features/uint8array-base64-hex.yml.dist
+++ b/features/uint8array-base64-hex.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    firefox: "133"
+    firefox_android: "133"
 compat_features:
   - javascript.builtins.Uint8Array.fromBase64
   - javascript.builtins.Uint8Array.fromHex
