--- a/features/pointer-events-api.yml
+++ b/features/pointer-events-api.yml
@@ -1,5 +1,5 @@
 name: Pointer Events
-description: Pointer events are an event model to handle pointing input devices such as a mouse, pen/stylus or touch (such as one or more fingers).
+description: Pointer events, such as `pointerdown`, and the `PointerEvent` API, represent general pointing inputs, from a wide range of devices, such as a mouse, pen or stylus, or touch with one or more fingers. Not to be confused with the `pointer-events` CSS property.
 spec: https://w3c.github.io/pointerevents/
 caniuse: pointer
 status:
