--- a/features/hsl.yml
+++ b/features/hsl.yml
@@ -5,9 +5,4 @@ caniuse: css3-colors
 group: color-types
 status:
   compute_from: css.types.color.hsl.alpha_parameter
-# TODO: For alignment with caniuse, add `hsla()` features when https://github.com/mdn/browser-compat-data/issues/24191 is resolved and update compute_from
-compat_features:
-  - css.types.color.hsl
-  - css.types.color.hsl.alpha_parameter
-  - css.types.color.hsl.mixed_type_parameters
-  - css.types.color.hsl.space_separated_parameters
+# TODO: For alignment with caniuse, tag `hsla()` features when https://github.com/mdn/browser-compat-data/issues/24191 is resolved and update compute_from
