--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ packages/web-features/data.schema.json
 packages/web-features/types.ts
 data.extended.json
 index.js
-
+!packages/baseline-browser-mapping/index.js
 
 # Ignore files created & used by pages & 11ty
 /_site/**
