Add more media keys and features

--- a/features/media-source.yml
+++ b/features/media-source.yml
@@ -2,3 +2,74 @@ name: Media source
 description: The `MediaSource` API is a custom data source for media elements commonly used for adaptive streaming. Also known as Media Source Extensions (MSE).
 spec: https://w3c.github.io/media-source/
 caniuse: mediasource
+compat_features:
+  - api.AudioTrack.sourceBuffer
+  - api.BufferedChangeEvent
+  - api.BufferedChangeEvent.BufferedChangeEvent
+  - api.BufferedChangeEvent.addedRanges
+  - api.BufferedChangeEvent.removedRanges
+  - api.HTMLMediaElement.srcObject
+  - api.MediaSource
+  - api.MediaSource.MediaSource
+  - api.MediaSource.activeSourceBuffers
+  - api.MediaSource.addSourceBuffer
+  - api.MediaSource.canConstructInDedicatedWorker_static
+  - api.MediaSource.clearLiveSeekableRange
+  - api.MediaSource.duration
+  - api.MediaSource.endOfStream
+  - api.MediaSource.handle
+  - api.MediaSource.isTypeSupported_static
+  - api.MediaSource.readyState
+  - api.MediaSource.removeSourceBuffer
+  - api.MediaSource.setLiveSeekableRange
+  - api.MediaSource.sourceBuffers
+  - api.MediaSource.sourceclose_event
+  - api.MediaSource.sourceended_event
+  - api.MediaSource.sourceopen_event
+  - api.MediaSource.worker_support
+  - api.MediaSourceHandle
+  - api.SourceBuffer
+  - api.SourceBuffer.abort
+  - api.SourceBuffer.abort.worker_support
+  - api.SourceBuffer.abort_event
+  - api.SourceBuffer.abort_event.worker_support
+  - api.SourceBuffer.appendBuffer
+  - api.SourceBuffer.appendBuffer.worker_support
+  - api.SourceBuffer.appendWindowEnd
+  - api.SourceBuffer.appendWindowEnd.worker_support
+  - api.SourceBuffer.appendWindowStart
+  - api.SourceBuffer.appendWindowStart.worker_support
+  - api.SourceBuffer.audioTracks
+  - api.SourceBuffer.audioTracks.worker_support
+  - api.SourceBuffer.buffered
+  - api.SourceBuffer.buffered.worker_support
+  - api.SourceBuffer.changeType
+  - api.SourceBuffer.changeType.worker_support
+  - api.SourceBuffer.error_event
+  - api.SourceBuffer.error_event.worker_support
+  - api.SourceBuffer.mode
+  - api.SourceBuffer.mode.worker_support
+  - api.SourceBuffer.remove
+  - api.SourceBuffer.remove.worker_support
+  - api.SourceBuffer.textTracks
+  - api.SourceBuffer.timestampOffset
+  - api.SourceBuffer.timestampOffset.worker_support
+  - api.SourceBuffer.update_event
+  - api.SourceBuffer.update_event.worker_support
+  - api.SourceBuffer.updateend_event
+  - api.SourceBuffer.updateend_event.worker_support
+  - api.SourceBuffer.updatestart_event
+  - api.SourceBuffer.updatestart_event.worker_support
+  - api.SourceBuffer.updating
+  - api.SourceBuffer.updating.worker_support
+  - api.SourceBuffer.videoTracks
+  - api.SourceBuffer.videoTracks.worker_support
+  - api.SourceBufferList
+  - api.SourceBufferList.addsourcebuffer_event
+  - api.SourceBufferList.addsourcebuffer_event.worker_support
+  - api.SourceBufferList.length
+  - api.SourceBufferList.length.worker_support
+  - api.SourceBufferList.removesourcebuffer_event
+  - api.SourceBufferList.removesourcebuffer_event.worker_support
+  - api.TextTrack.sourceBuffer
+  - api.VideoTrack.sourceBuffer
