--- a/features/media-session.yml.dist
+++ b/features/media-session.yml.dist
@@ -4,12 +4,9 @@
 status:
   baseline: false
   support:
-    chrome: "73"
-    chrome_android: "57"
-    edge: "79"
-    firefox: "82"
-    safari: "15"
-    safari_ios: "15"
+    chrome: "128"
+    chrome_android: "128"
+    edge: "128"
 compat_features:
   # baseline: high
   # baseline_low_date: 2021-09-20
@@ -39,7 +36,6 @@ compat_features:
   - api.MediaMetadata.artwork
   - api.MediaMetadata.title
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "73"
@@ -58,3 +54,73 @@ compat_features:
   - api.MediaSession.setActionHandler.previoustrack_type
   - api.MediaSession.setActionHandler.seekbackward_type
   - api.MediaSession.setActionHandler.seekforward_type
+
+  # baseline: false
+  # support:
+  #   chrome: "77"
+  #   chrome_android: "77"
+  #   edge: "79"
+  #   firefox: "82"
+  #   safari: "15"
+  #   safari_ios: "15"
+  - api.MediaSession.setActionHandler.stop_type
+
+  # baseline: false
+  # support:
+  #   chrome: "78"
+  #   chrome_android: "78"
+  #   edge: "79"
+  #   firefox: "82"
+  #   safari: "15"
+  #   safari_ios: "15"
+  - api.MediaSession.setActionHandler.seekto_type
+
+  # baseline: false
+  # support:
+  #   chrome: "81"
+  #   chrome_android: "57"
+  #   edge: "81"
+  #   firefox: "82"
+  #   safari: "15"
+  #   safari_ios: "15"
+  - api.MediaSession.setPositionState
+
+  # baseline: false
+  # support:
+  #   chrome: "128"
+  #   chrome_android: "128"
+  #   edge: "128"
+  #   firefox: "82"
+  #   safari: "15"
+  #   safari_ios: "15"
+  - api.MediaSession.setActionHandler.skipad_type
+
+  # baseline: false
+  # support:
+  #   chrome: "93"
+  #   chrome_android: "93"
+  #   edge: "93"
+  - api.MediaSession.setActionHandler.hangup_type
+  - api.MediaSession.setActionHandler.togglecamera_type
+  - api.MediaSession.setActionHandler.togglemicrophone_type
+  - api.MediaSession.setCameraActive
+  - api.MediaSession.setMicrophoneActive
+
+  # baseline: false
+  # support:
+  #   chrome: "111"
+  #   chrome_android: "111"
+  #   edge: "111"
+  - api.MediaSession.setActionHandler.nextslide_type
+  - api.MediaSession.setActionHandler.previousslide_type
+
+  # baseline: false
+  # support:
+  #   chrome: "127"
+  #   chrome_android: "127"
+  #   edge: "127"
+  - api.ChapterInformation
+  - api.ChapterInformation.artwork
+  - api.ChapterInformation.startTime
+  - api.ChapterInformation.title
+  - api.MediaMetadata.chapterInfo
