--- a/features/media-source.yml.dist
+++ b/features/media-source.yml.dist
@@ -3,13 +3,7 @@
 
 status:
   baseline: false
-  support:
-    chrome: "31"
-    chrome_android: "31"
-    edge: "12"
-    firefox: "42"
-    firefox_android: "42"
-    safari: "8"
+  support: {}
 compat_features:
   # baseline: false
   # support:
@@ -20,9 +14,15 @@ compat_features:
   #   firefox_android: "41"
   #   safari: "8"
   - api.MediaSource
+  - api.MediaSource.activeSourceBuffers
+  - api.MediaSource.addSourceBuffer
+  - api.MediaSource.duration
+  - api.MediaSource.endOfStream
+  - api.MediaSource.isTypeSupported_static
+  - api.MediaSource.removeSourceBuffer
+  - api.MediaSource.sourceBuffers
   - api.SourceBufferList
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "31"
@@ -32,3 +32,169 @@ compat_features:
   #   firefox_android: "42"
   #   safari: "8"
   - api.SourceBuffer
+  - api.SourceBuffer.abort
+
+  # baseline: false
+  # support:
+  #   chrome: "31"
+  #   chrome_android: "33"
+  #   edge: "12"
+  #   firefox: "42"
+  #   firefox_android: "41"
+  #   safari: "8"
+  - api.MediaSource.MediaSource
+  - api.MediaSource.readyState
+  - api.SourceBufferList.length
+
+  # baseline: false
+  # support:
+  #   chrome: "31"
+  #   chrome_android: "33"
+  #   edge: "12"
+  #   firefox: "42"
+  #   firefox_android: "42"
+  #   safari: "8"
+  - api.SourceBuffer.appendBuffer
+  - api.SourceBuffer.appendWindowEnd
+  - api.SourceBuffer.appendWindowStart
+  - api.SourceBuffer.buffered
+  - api.SourceBuffer.mode
+  - api.SourceBuffer.remove
+  - api.SourceBuffer.timestampOffset
+  - api.SourceBuffer.updating
+
+  # baseline: false
+  # support:
+  #   chrome: "53"
+  #   chrome_android: "53"
+  #   edge: "17"
+  #   firefox: "42"
+  #   firefox_android: "41"
+  #   safari: "10.1"
+  - api.MediaSource.sourceended_event
+  - api.MediaSource.sourceopen_event
+  - api.SourceBufferList.addsourcebuffer_event
+  - api.SourceBufferList.removesourcebuffer_event
+
+  # baseline: false
+  # support:
+  #   chrome: "53"
+  #   chrome_android: "53"
+  #   edge: "17"
+  #   firefox: "42"
+  #   firefox_android: "42"
+  #   safari: "10.1"
+  - api.SourceBuffer.abort_event
+  - api.SourceBuffer.error_event
+  - api.SourceBuffer.update_event
+  - api.SourceBuffer.updateend_event
+  - api.SourceBuffer.updatestart_event
+
+  # baseline: false
+  # support:
+  #   chrome: "53"
+  #   chrome_android: "53"
+  #   edge: "17"
+  #   firefox: "87"
+  #   firefox_android: "87"
+  #   safari: "10.1"
+  - api.MediaSource.sourceclose_event
+
+  # baseline: false
+  # support:
+  #   chrome: "62"
+  #   chrome_android: "62"
+  #   edge: "17"
+  #   firefox: "50"
+  #   firefox_android: "50"
+  #   safari: "10.1"
+  - api.MediaSource.clearLiveSeekableRange
+  - api.MediaSource.setLiveSeekableRange
+
+  # baseline: false
+  # support:
+  #   chrome: "70"
+  #   chrome_android: "70"
+  #   edge: "79"
+  #   firefox: "63"
+  #   firefox_android: "63"
+  #   safari: "12.1"
+  - api.SourceBuffer.changeType
+
+  # baseline: false
+  # support:
+  #   chrome: "108"
+  #   chrome_android: "108"
+  #   edge: "108"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - api.MediaSourceHandle
+
+  # baseline: false
+  # support:
+  #   chrome: "108"
+  #   chrome_android: "108"
+  #   edge: "108"
+  #   safari: "18"
+  - api.MediaSource.canConstructInDedicatedWorker_static
+  - api.MediaSource.handle
+
+  # baseline: false
+  # support:
+  #   chrome: "108"
+  #   chrome_android: "108"
+  #   edge: "108"
+  - api.MediaSource.worker_support
+  - api.SourceBuffer.abort.worker_support
+  - api.SourceBuffer.abort_event.worker_support
+  - api.SourceBuffer.appendBuffer.worker_support
+  - api.SourceBuffer.appendWindowEnd.worker_support
+  - api.SourceBuffer.appendWindowStart.worker_support
+  - api.SourceBuffer.buffered.worker_support
+  - api.SourceBuffer.changeType.worker_support
+  - api.SourceBuffer.error_event.worker_support
+  - api.SourceBuffer.mode.worker_support
+  - api.SourceBuffer.remove.worker_support
+  - api.SourceBuffer.timestampOffset.worker_support
+  - api.SourceBuffer.update_event.worker_support
+  - api.SourceBuffer.updateend_event.worker_support
+  - api.SourceBuffer.updatestart_event.worker_support
+  - api.SourceBuffer.updating.worker_support
+  - api.SourceBufferList.addsourcebuffer_event.worker_support
+  - api.SourceBufferList.length.worker_support
+  - api.SourceBufferList.removesourcebuffer_event.worker_support
+
+  # baseline: false
+  # support:
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.HTMLMediaElement.srcObject
+
+  # baseline: false
+  # support:
+  #   safari: "17"
+  #   safari_ios: "17.1"
+  - api.BufferedChangeEvent
+  - api.BufferedChangeEvent.BufferedChangeEvent
+  - api.BufferedChangeEvent.addedRanges
+  - api.BufferedChangeEvent.removedRanges
+
+  # baseline: false
+  # support:
+  #   safari: "7"
+  - api.VideoTrack.sourceBuffer
+
+  # baseline: false
+  # support:
+  #   safari: "8"
+  - api.AudioTrack.sourceBuffer
+  - api.SourceBuffer.audioTracks
+  - api.SourceBuffer.textTracks
+  - api.SourceBuffer.videoTracks
+  - api.TextTrack.sourceBuffer
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
+  - api.SourceBuffer.audioTracks.worker_support
+  - api.SourceBuffer.videoTracks.worker_support
