--- a/features/media-capture-region.yml
+++ b/features/media-capture-region.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
-name: Region Capture
-description: TODO
+name: Region capture
+description: The Region Capture API lets you crop a video track derived from display-capture of the active browser tab.
 spec: https://w3c.github.io/mediacapture-region/
 compat_features:
   - api.BrowserCaptureMediaStreamTrack
