--- a/features/media-session.yml
+++ b/features/media-session.yml
@@ -1,6 +1,8 @@
 name: Media session
 description: The `navigator.mediaSession` API integrates with platform UI for media playback. It can be used to set metadata such as title and artwork, and to handle user actions like playing, pausing, or seeking.
 spec: https://w3c.github.io/mediasession/
+status:
+  compute_from: api.MediaSession
 compat_features:
   - api.ChapterInformation
   - api.ChapterInformation.artwork
