--- a/features/media-session.yml.dist
+++ b/features/media-session.yml.dist
@@ -4,9 +4,12 @@
 status:
   baseline: false
   support:
-    chrome: "128"
-    chrome_android: "128"
-    edge: "128"
+    chrome: "73"
+    chrome_android: "57"
+    edge: "79"
+    firefox: "82"
+    safari: "15"
+    safari_ios: "15"
 compat_features:
   # baseline: high
   # baseline_low_date: 2021-09-20
@@ -36,6 +39,7 @@ compat_features:
   - api.MediaMetadata.artwork
   - api.MediaMetadata.title
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "73"
