--- a/features/media-source.yml
+++ b/features/media-source.yml
@@ -2,6 +2,8 @@ name: Media source
 description: The `MediaSource` API is a custom data source for media elements commonly used for adaptive streaming. Also known as Media Source Extensions (MSE).
 spec: https://w3c.github.io/media-source/
 caniuse: mediasource
+status:
+  compute_from: api.MediaSource
 compat_features:
   - api.AudioTrack.sourceBuffer
   - api.BufferedChangeEvent
