--- a/features/media-capabilities.yml.dist
+++ b/features/media-capabilities.yml.dist
@@ -56,6 +56,27 @@ compat_features:
   #   safari_ios: "15.4"
   - api.MediaCapabilities.encodingInfo
 
+  # baseline: low
+  # baseline_low_date: 2024-10-29
+  # support:
+  #   chrome: "59"
+  #   chrome_android: "59"
+  #   edge: "12"
+  #   firefox: "132"
+  #   firefox_android: "132"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.MediaStreamTrack.getCapabilities
+
+  # baseline: false
+  # support:
+  #   chrome: "67"
+  #   chrome_android: "67"
+  #   edge: "79"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - api.InputDeviceInfo.getCapabilities
+
   # baseline: false
   # support:
   #   chrome: "80"
