--- a/features/media-playback-quality.yml
+++ b/features/media-playback-quality.yml
@@ -1,5 +1,5 @@
 name: Media playback quality
-description: The Media Playback Quality API contains metrics that can be used to determine the playback quality of a video.
+description: The Media Playback Quality API contains metrics that can be used to determine the playback quality of a video, such as the creation time, and how many frames were dropped.
 spec: https://w3c.github.io/media-playback-quality/
 compat_features:
   - api.HTMLVideoElement.getVideoPlaybackQuality
