--- a/features/media-transform.yml
+++ b/features/media-transform.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
 name: MediaStreamTrack Insertable Media Processing using Streams
-description: TODO
+description: The MediaStreamTrack Insertable Media Processing using Streams API, also known as MIMPuS, gives direct access to media streams for manipulations such as merging streams, real time effects, and content overlays.
 spec: https://w3c.github.io/mediacapture-transform/
 compat_features:
   - api.MediaStreamTrackProcessor
