--- a/features/encrypted-media.yml
+++ b/features/encrypted-media.yml
@@ -1,7 +1,8 @@
-draft_date: 2024-10-28
-name: Encrypted Media Extensions
-description: TODO
+name: Encrypted media extensions
+description: Encrypted Media Extensions control the playback of content which is subject to a digital restrictions management scheme.
 spec: https://w3c.github.io/encrypted-media/
+status:
+  compute_from: api.Navigator.requestMediaKeySystemAccess
 compat_features:
   - api.HTMLMediaElement.encrypted_event
   - api.HTMLMediaElement.mediaKeys
