--- a/features/content-visibility.yml.dist
+++ b/features/content-visibility.yml.dist
@@ -8,8 +8,8 @@ status:
     chrome: "108"
     chrome_android: "108"
     edge: "108"
-    firefox: "125"
-    firefox_android: "125"
+    firefox: "130"
+    firefox_android: "130"
     safari: "18"
     safari_ios: "18"
 compat_features:
@@ -24,8 +24,10 @@ compat_features:
   #   safari: "18"
   #   safari_ios: "18"
   - css.properties.content-visibility
+  - css.properties.content-visibility.auto
+  - css.properties.content-visibility.hidden
+  - css.properties.content-visibility.visible
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: low
   # baseline_low_date: 2024-09-16
   # support:
@@ -39,3 +41,16 @@ compat_features:
   - api.ContentVisibilityAutoStateChangeEvent
   - api.ContentVisibilityAutoStateChangeEvent.ContentVisibilityAutoStateChangeEvent
   - api.ContentVisibilityAutoStateChangeEvent.skipped
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2024-09-16
+  # support:
+  #   chrome: "108"
+  #   chrome_android: "108"
+  #   edge: "108"
+  #   firefox: "130"
+  #   firefox_android: "130"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - api.Element.contentvisibilityautostatechange_event
