--- a/features/cssom-view.yml
+++ b/features/cssom-view.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-11-21
 name: CSSOM View Module
-description: TODO
+description: The CSS Object Model (CSSOM) View Module is for inspecting and manipulating the visual view of a document. This includes getting the position of element layout boxes, obtaining the width of the viewport through script, and also scrolling an element.
 spec: https://drafts.csswg.org/cssom-view-1/
 compat_features:
   - api.CaretPosition
