start moving keys out

--- a/features/attribution-reporting.yml.dist
+++ b/features/attribution-reporting.yml.dist
@@ -30,6 +30,7 @@ compat_features:
   - api.HTMLImageElement.attributionSrc
   - api.HTMLScriptElement.attributionSrc
   - api.Request.Request.init_attributionReporting_parameter
+  - api.Window.open.features_parameter_attributionsrc
   - api.XMLHttpRequest.setAttributionReporting
   - api.fetch.init_attributionReporting_parameter
   - html.elements.a.attributionsrc
