--- a/features/window-management.yml
+++ b/features/window-management.yml
@@ -21,5 +21,6 @@ compat_features:
   - api.ScreenDetails.screens
   - api.ScreenDetails.screenschange_event
   - api.Window.getScreenDetails
+  - api.Window.moveTo.relative-multi-screen
   - api.Window.open.relative-multi-screen
   - http.headers.Permissions-Policy.window-management
