--- a/features/window-management.yml.dist
+++ b/features/window-management.yml.dist
@@ -14,6 +14,7 @@ compat_features:
   #   edge: "100"
   #   firefox: "1"
   #   firefox_android: "4"
+  - api.Window.moveTo.relative-multi-screen
   - api.Window.open.relative-multi-screen
 
   # baseline: false
