--- a/features/cssom-view.yml
+++ b/features/cssom-view.yml
@@ -2,15 +2,22 @@ name: CSSOM View Module
 description: The CSS Object Model (CSSOM) View Module is for inspecting and manipulating the visual view of a document. This includes getting the position of element layout boxes, obtaining the width of the viewport through script, and also scrolling an element.
 spec: https://drafts.csswg.org/cssom-view-1/
 compat_features:
+  # No home for caret position generally yet
   - api.CaretPosition
   - api.CaretPosition.getClientRect
   - api.CaretPosition.offset
   - api.CaretPosition.offsetNode
-  - api.Document.caretPositionFromPoint.options_parameter
+
+  # put in document-caretpositionfrompoint
+  #- api.Document.caretPositionFromPoint.options_parameter
+
+  # feature policy will be a feature
   - api.Document.featurePolicy
+
   - api.Document.getBoxQuads
   - api.Document.scroll_event
   - api.Document.scrollingElement
+
   - api.Element.clientHeight
   - api.Element.clientLeft
   - api.Element.clientTop
@@ -19,6 +26,7 @@ compat_features:
   - api.Element.getBoundingClientRect
   - api.Element.getBoxQuads
   - api.Element.getClientRects
+
   - api.Element.scroll
   - api.Element.scroll.options_behavior_parameter
   - api.Element.scroll.options_left_parameter
@@ -36,13 +44,16 @@ compat_features:
   - api.Element.scrollTop
   - api.Element.scrollWidth
   - api.Element.scroll_event
+
   - api.HTMLElement.offsetHeight
   - api.HTMLElement.offsetLeft
   - api.HTMLElement.offsetParent
   - api.HTMLElement.offsetTop
   - api.HTMLElement.offsetWidth
+
   - api.HTMLImageElement.x
   - api.HTMLImageElement.y
+
   - api.MediaQueryList
   - api.MediaQueryList.EventTarget_inheritance
   - api.MediaQueryList.change_event
@@ -52,8 +63,10 @@ compat_features:
   - api.MediaQueryListEvent.MediaQueryListEvent
   - api.MediaQueryListEvent.matches
   - api.MediaQueryListEvent.media
+
   - api.Range.getBoundingClientRect
   - api.Range.getClientRects
+
   - api.Screen
   - api.Screen.availHeight
   - api.Screen.availWidth
@@ -62,17 +75,25 @@ compat_features:
   - api.Screen.pixelDepth
   - api.Screen.width
   - api.Text.getBoxQuads
-  - api.VisualViewport.resize_event
-  - api.VisualViewport.scroll_event
-  - api.VisualViewport.scrollend_event
+
+  # moved to visual-viewport
+  #- api.VisualViewport.resize_event
+  #- api.VisualViewport.scroll_event
+  #- api.VisualViewport.scrollend_event
+
   - api.Window.devicePixelRatio
   - api.Window.innerHeight
   - api.Window.innerWidth
   - api.Window.matchMedia
   - api.Window.moveBy
   - api.Window.moveTo
-  - api.Window.moveTo.relative-multi-screen
-  - api.Window.open.features_parameter_attributionsrc
+
+  # moved to window-management
+  #- api.Window.moveTo.relative-multi-screen
+
+  # moved to attribution-reporting
+  #- api.Window.open.features_parameter_attributionsrc
+
   - api.Window.outerHeight
   - api.Window.outerWidth
   - api.Window.resizeBy
@@ -87,6 +108,7 @@ compat_features:
   - api.Window.screenX.relative-multi-screen
   - api.Window.screenY
   - api.Window.screenY.relative-multi-screen
+
   - api.Window.scroll
   - api.Window.scroll.options_behavior_parameter
   - api.Window.scroll.options_left_parameter
