--- a/features/selection-api.yml
+++ b/features/selection-api.yml
@@ -33,6 +33,8 @@ compat_features:
   - api.Range.endContainer
   - api.Range.endOffset
   - api.Range.extractContents
+  - api.Range.getBoundingClientRect
+  - api.Range.getClientRects
   - api.Range.insertNode
   - api.Range.intersectsNode
   - api.Range.isPointInRange
