--- a/features/cssom-view.yml
+++ b/features/cssom-view.yml
@@ -2,13 +2,11 @@ name: CSSOM View Module
 description: The CSS Object Model (CSSOM) View Module is for inspecting and manipulating the visual view of a document. This includes getting the position of element layout boxes, obtaining the width of the viewport through script, and also scrolling an element.
 spec: https://drafts.csswg.org/cssom-view-1/
 compat_features:
-  # No home for caret position generally yet
-  - api.CaretPosition
-  - api.CaretPosition.getClientRect
-  - api.CaretPosition.offset
-  - api.CaretPosition.offsetNode
-
-  # put in document-caretpositionfrompoint
+  # moved to document-caretpositionfrompoint
+  #- api.CaretPosition
+  #- api.CaretPosition.getClientRect
+  #- api.CaretPosition.offset
+  #- api.CaretPosition.offsetNode
   #- api.Document.caretPositionFromPoint.options_parameter
 
   # feature policy will be a feature
