--- a/features/img.yml
+++ b/features/img.yml
@@ -17,6 +17,8 @@ compat_features:
   - api.HTMLImageElement.naturalWidth
   - api.HTMLImageElement.src
   - api.HTMLImageElement.width
+  - api.HTMLImageElement.x
+  - api.HTMLImageElement.y
   - html.elements.img
   - html.elements.img.alt
   - html.elements.img.crossorigin
