--- a/features/cssom-view.yml
+++ b/features/cssom-view.yml
@@ -12,6 +12,7 @@ compat_features:
   # feature policy will be a feature
   - api.Document.featurePolicy
 
+  # maybe this goes in geometry?
   - api.Document.getBoxQuads
 
   # moved to scroll-elements
@@ -52,8 +53,9 @@ compat_features:
   - api.HTMLElement.offsetTop
   - api.HTMLElement.offsetWidth
 
-  - api.HTMLImageElement.x
-  - api.HTMLImageElement.y
+  # moved to img
+  #- api.HTMLImageElement.x
+  #- api.HTMLImageElement.y
 
   - api.MediaQueryList
   - api.MediaQueryList.EventTarget_inheritance
