--- a/features/dom.yml
+++ b/features/dom.yml
@@ -152,13 +152,20 @@ compat_features:
   - api.Element.children
   - api.Element.classList
   - api.Element.className
+  - api.Element.clientHeight
+  - api.Element.clientLeft
+  - api.Element.clientTop
+  - api.Element.clientWidth
   - api.Element.closest
+  - api.Element.currentCSSZoom
   - api.Element.firstElementChild
   - api.Element.getAttribute
   - api.Element.getAttributeNS
   - api.Element.getAttributeNames
   - api.Element.getAttributeNode
   - api.Element.getAttributeNodeNS
+  - api.Element.getBoundingClientRect
+  - api.Element.getClientRects
   - api.Element.getElementsByClassName
   - api.Element.getElementsByTagName
   - api.Element.getElementsByTagName.all_elements_selector
@@ -204,6 +211,11 @@ compat_features:
   - api.HTMLElement.dir
   - api.HTMLElement.hidden
   - api.HTMLElement.innerText
+  - api.HTMLElement.offsetHeight
+  - api.HTMLElement.offsetLeft
+  - api.HTMLElement.offsetParent
+  - api.HTMLElement.offsetTop
+  - api.HTMLElement.offsetWidth
   - api.HTMLElement.outerText
   - api.NamedNodeMap
   - api.NamedNodeMap.getNamedItem
