--- a/features/window.yml
+++ b/features/window.yml
@@ -14,14 +14,28 @@ compat_features:
   - api.Window.focus_event
   - api.Window.frameElement
   - api.Window.frames
+  - api.Window.innerHeight
+  - api.Window.innerWidth
   - api.Window.length
   - api.Window.load_event
+  - api.Window.moveBy
+  - api.Window.moveTo
   - api.Window.name
   - api.Window.open
   - api.Window.open.features_parameter_popup
   - api.Window.open.once_per_event
   - api.Window.opener
+  - api.Window.outerHeight
+  - api.Window.outerWidth
   - api.Window.parent
+  - api.Window.resizeBy
+  - api.Window.resizeTo
+  - api.Window.resize_event
+  - api.Window.screen
+  - api.Window.screenLeft
+  - api.Window.screenTop
+  - api.Window.screenX
+  - api.Window.screenY
   - api.Window.self
   - api.Window.stop
   - api.Window.top
